--- a/Basico/WebContent/publico/Prueba.xhtml
+++ b/Basico/WebContent/publico/Prueba.xhtml
@@ -14,11 +14,9 @@
 </h:head>
 <h:body>
 	<p:layout fullPage="true">
-	<p:layoutUnit position="north" style="background-color:#d5e7b4" minSize="100" styleClass="panelGreen">
+	<p:layoutUnit position="north" style="background-color:#d5e7b4" minSize="100" styleClass="panelGreen"/>
 	
-	   
-	    
-		</p:layoutUnit>
+		
 		<p:layoutUnit position="center" style="border:0 ;background-color:#7c7e7e">
 		
 				<ui:include src="/publico/loginPrince.xhtml"/>	
