nuevo vuelco de idea de la aplicacion

--- a/Basico/WebContent/publico/comun/principal.xhtml
+++ b/Basico/WebContent/publico/comun/principal.xhtml
@@ -10,7 +10,7 @@
 	
 	
 			<p:layout>
-				<p:layoutUnit position="north">
+				<p:layoutUnit position="north" style="border:0 ;background-color:#7c7e7e">
 				<h:form>
 					<div class="textarea">
 						<h3>Escribe aqui los mensajes</h3>
@@ -24,7 +24,7 @@
 					</h:form>
        
          </p:layoutUnit>
-				<p:layoutUnit position="center">
+				<p:layoutUnit position="center" style="border:0 ;background-color:#7c7e7e">
 			<h:form id="tabla">		
 	   <p:growl id="msgs" showDetail="true"/>
 	 
